grade-reports/exam-2/test-easy-01.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/apate295
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is easy-01
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/easy-01/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/apate295/grade-.18K
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o easy.o easy.cpp
easy.cpp: In function ‘bool addAt(LinkedList&, int, int)’:
easy.cpp:9:28: error: cannot convert ‘LinkedList’ to ‘LinkedList*’ in initialization
         LinkedList* temp = mylist;
                            ^~~~~~
easy.cpp:12:26: error: ‘class LinkedList’ has no member named ‘next’
             temp = temp->next;
                          ^~~~
easy.cpp:17:35: error: ‘class LinkedList’ has no member named ‘next’
         LinkedList* temp2 = temp->next;
                                   ^~~~
easy.cpp:20:15: error: ‘class LinkedList’ has no member named ‘next’
         temp->next = add;
               ^~~~
easy.cpp:21:14: error: ‘class LinkedList’ has no member named ‘next’
         add->next = temp2;
              ^~~~
easy.cpp:22:17: error: expected ‘}’ at end of input
         return 1;
                 ^
<builtin>: recipe for target 'easy.o' failed
make: *** [easy.o] Error 1
Could not compile easy.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
